--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "@rails/actiontext": "^6.0.3-2",
     "@rails/webpacker": "5.2.1",
+    "stimulus": "^1.1.1",
+    "stimulus_reflex": "^3.3.0-pre2",
     "trix": "^1.2.0"
   },
   "devDependencies": {
