--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "easyfables",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@rails/actiontext": "^6.0.3-2",
     "@rails/webpacker": "5.2.1",
     "stimulus": "^1.1.1",
